--- a/pagina_Inicio.html
+++ b/pagina_Inicio.html
@@ -27,7 +27,7 @@
     <main>
         <section id="hero" class="fade-in-up-initial hero-bg">
             <div class="container">
-                <img src="img/imagen_logo_crusertel_transparente.png" alt="Logo Crusertel" style="max-width: 300px; width: 100%; height: auto; margin: 0 auto 20px; display: block;">
+                <img src="img/imagen_logo_crusertel_transparente.png" alt="Logo Crusertel" class="about-image" style="max-width: 300px;">
                 <p><b>Conectamos tu mundo con la mejor señal</b></p>
             </div>
         </section>
@@ -37,13 +37,13 @@
                 <h2>¿QUIÉNES SOMOS Y POR QUÉ CONFIAR EN NOSOTROS?</h2>
                 <p><b>En Crusertel, somos tu socio estratégico en telecomunicaciones, dedicados a impulsar la conectividad y la eficiencia de tu negocio. Nos especializamos en ofrecer soluciones integrales y personalizadas para pymes y microempresas, entendiendo a fondo las necesidades particulares de aquellos con puntos de venta que requieren comunicaciones fiables y adaptadas a su operativa diaria. Trabajamos para brindarte acceso a una amplia gama de servicios, colaborando con operadores líderes como Vodafone y Lowi para asegurar opciones competitivas y de calidad que te permitan mantener tu negocio siempre conectado y listo para atender a tus clientes.</b></p>
 
-                <div style="display: flex; align-items: flex-start; gap: 30px; flex-wrap: wrap;">
-                    <div style="flex: 2; min-width: 300px;">
+                <div class="about-flex">
+                    <div class="about-text">
                         <h2>DEPOSITA TU CONFIANZA EN NOSOTROS, NO TE FALLAREMOS!</h2>
                         <p><b>En Crusertel, creemos en el poder de las conexiones. Nos apasiona unir a las personas a través de la comunicación y ofrecerles experiencias únicas en el mundo de las telecomunicaciones. Somos más que distribuidores oficiales de tarifas móviles; somos facilitadores de encuentros, colaboradores en la construcción de puentes y proveedores de soluciones innovadoras. Desde nuestras soluciones de fibra y móvil, nos enorgullece conectar a individuos, empresas y comunidades. Nuestro enfoque va más allá de lo convencional, ya que nos preocupamos por el bienestar de nuestros clientes y nos esforzamos por brindarles un servicio excepcional. Explora nuestras tarifas móviles para pymes y autónomos, descubre las posibilidades de la fibra móvil. Crusertel: tu compañía de telecomunicaciones que se preocupa por las personas y las conexiones que generamos.</b></p>
                     </div>
-                    <div style="flex: 1; min-width: 200px; text-align: center;">
-                        <img src="img/imagen_unnamed-Photoroom (1).png" alt="Imagen representativa de Crusertel" class="img-hover-grow" style="width: 100%; max-width: 250px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+                    <div class="about-image">
+                        <img src="img/imagen_unnamed-Photoroom (1).png" alt="Imagen representativa de Crusertel" style="max-width: 250px;">
                     </div>
                 </div>
             </div>
