--- a/pagina_faq.html
+++ b/pagina_faq.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="fade-in-down-initial">
         <div class="container header-content">
             <div class="logo">
                 <a href="pagina_Inicio.html"><img src="img/imagen_logo_crusertel.jpg" alt="Logo Crusertel"></a>
@@ -37,19 +37,19 @@
                 <div class="faq-item faq-left">
                     <h3>¿Qué diferencia hay entre Vodafone y Lowi?</h3>
                     <div class="faq-respuesta">
-                        <p>"Lowi es la marca low-cost de Vodafone, con tarifas más sencillas y económicas, principalmente online. Vodafone ofrece más servicios (TV, roaming amplio, etc.) y atención más completa."</p>
+                        <p>Lowi es la marca low-cost de Vodafone, con tarifas más sencillas y económicas, principalmente online. Vodafone ofrece más servicios (TV, roaming amplio, etc.) y atención más completa.</p>
                     </div>
                 </div>
                 <div class="faq-item faq-right">
                     <h3>¿Qué cobertura utilizan Vodafone y Lowi?</h3>
                     <div class="faq-respuesta">
-                        <p>"Ambos utilizan la red de Vodafone (móvil 5G y fibra), que cubre la mayor parte del territorio nacional. Lowi también puede usar red de fibra indirecta en zonas específicas."</p>
+                        <p>Ambos utilizan la red de Vodafone (móvil 5G y fibra), que cubre la mayor parte del territorio nacional. Lowi también puede usar red de fibra indirecta en zonas específicas.</p>
                     </div>
                 </div>
                 <div class="faq-item faq-left">
                     <h3>¿Cómo puedo comprobar la cobertura de fibra y móvil en mi zona?</h3>
                     <div class="faq-respuesta">
-                        <p>"Puedes usar el verificador de cobertura en la web de cada operador o contactar con ellos directamente."</p>
+                        <p>Puedes usar el verificador de cobertura en la web de cada operador o contactar con ellos directamente.</p>
                     </div>
                 </div>
                 <div class="faq-item faq-right">
