cambio de tipografía y texto

--- a/pagina_Inicio.html
+++ b/pagina_Inicio.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crusertel - Inicio</title>
-    <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>Crusertel - Tu Partner en Telecomunicaciones</title>
+    <link rel="stylesheet" href="main.css?v=1.1">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="fade-in-down-initial">
@@ -28,22 +28,23 @@
         <section id="hero" class="fade-in-up-initial hero-bg">
             <div class="container">
                 <img src="img/imagen_logo_crusertel_transparente.png" alt="Logo Crusertel" class="about-image" style="max-width: 300px;">
-                <p><b>Conectamos tu mundo con la mejor señal</b></p>
+                <p class="hero-tagline">Conectamos tu mundo con la mejor señal</p>
             </div>
         </section>
 
         <section id="about" class="fade-in-up-initial fondo-quienes">
             <div class="container">
-                <h2>¿QUIÉNES SOMOS Y POR QUÉ CONFIAR EN NOSOTROS?</h2>
-                <p><b>En Crusertel, somos tu socio estratégico en telecomunicaciones, dedicados a impulsar la conectividad y la eficiencia de tu negocio. Nos especializamos en ofrecer soluciones integrales y personalizadas para pymes y microempresas, entendiendo a fondo las necesidades particulares de aquellos con puntos de venta que requieren comunicaciones fiables y adaptadas a su operativa diaria. Trabajamos para brindarte acceso a una amplia gama de servicios, colaborando con operadores líderes como Vodafone y Lowi para asegurar opciones competitivas y de calidad que te permitan mantener tu negocio siempre conectado y listo para atender a tus clientes.</b></p>
+                <h2 class="section-title">¿Por qué elegir Crusertel?</h2>
+                <p class="intro-text">Somos tu socio estratégico en telecomunicaciones, especializados en soluciones para pymes y microempresas. Entendemos las necesidades de tu negocio y trabajamos con operadores líderes como Vodafone y Lowi para ofrecerte las mejores opciones del mercado.</p>
 
                 <div class="about-flex">
                     <div class="about-text">
-                        <h2>DEPOSITA TU CONFIANZA EN NOSOTROS, NO TE FALLAREMOS!</h2>
-                        <p><b>En Crusertel, creemos en el poder de las conexiones. Nos apasiona unir a las personas a través de la comunicación y ofrecerles experiencias únicas en el mundo de las telecomunicaciones. Somos más que distribuidores oficiales de tarifas móviles; somos facilitadores de encuentros, colaboradores en la construcción de puentes y proveedores de soluciones innovadoras. Desde nuestras soluciones de fibra y móvil, nos enorgullece conectar a individuos, empresas y comunidades. Nuestro enfoque va más allá de lo convencional, ya que nos preocupamos por el bienestar de nuestros clientes y nos esforzamos por brindarles un servicio excepcional. Explora nuestras tarifas móviles para pymes y autónomos, descubre las posibilidades de la fibra móvil. Crusertel: tu compañía de telecomunicaciones que se preocupa por las personas y las conexiones que generamos.</b></p>
+                        <h3 class="subsection-title">Compromiso y profesionalidad</h3>
+                        <p class="body-text">En Crusertel creemos en el poder de las conexiones. Más que distribuidores oficiales, somos facilitadores de soluciones que impulsan tu negocio. Desde fibra óptica hasta tarifas móviles adaptadas, ofrecemos un servicio excepcional y personalizado.</p>
+                        
+                        <p class="body-text">Nuestro enfoque va más allá de lo convencional: nos preocupamos por el bienestar de nuestros clientes y nos esforzamos por brindar experiencias únicas. Descubre cómo podemos ayudarte a mantener tu negocio siempre conectado.</p>
                     </div>
                     <div class="about-image">
-                        <img src="img/imagen_unnamed-Photoroom (1).png" alt="Imagen representativa de Crusertel" style="max-width: 250px;">
                     </div>
                 </div>
             </div>
@@ -51,19 +52,19 @@
 
         <section id="services" class="fade-in-up-initial reseñas-bg">
             <div class="container">
-                <h2>Reseñas De Clientes</h2>
+                <h2 class="section-title">Lo que dicen nuestros clientes</h2>
                 <div class="service-grid">
                     <div class="service-item pop-in-initial">
-                        <h3>Elvira Manrique</h3>
-                        <p>"Estoy encantada con Crusertel. Necesitaba cambiar mi tarifa de fibra y móvil y no sabía por dónde empezar con tantas opciones. En Crusertel me asesoraron pacientemente, explicándome las diferencias entre las ofertas de Vodafone y Lowi y ayudándome a encontrar el paquete que mejor se ajustaba a mi consumo y presupuesto. La gestión fue súper rápida y sencilla, y ahora disfruto de más gigas y mejor precio gracias a su recomendación. ¡Un servicio muy profesional y cercano!"</p>
+                        <h3 class="testimonial-name">Elvira Manrique</h3>
+                        <p class="testimonial-text">"Estoy encantada con Crusertel. Me asesoraron pacientemente, explicándome las diferencias entre Vodafone y Lowi, y encontraron el paquete perfecto para mi consumo. La gestión fue rápida y ahora disfruto de más gigas por mejor precio. ¡Un servicio muy profesional y cercano!"</p>
                     </div>
                     <div class="service-item pop-in-initial">
-                        <h3>Lope Carrillo</h3>
-                        <p>"¡Altamente recomendables! Contacté a Crusertel para informarme sobre Lowi y la experiencia fue fantástica. Me resolvieron todas las dudas sobre la portabilidad y la cobertura (que, por cierto, es genial con la red de Vodafone). El cambio fue transparente y sin cortes, tal como me prometieron. Valoro mucho la honestidad y la claridad con la que trabajan. Si buscas un distribuidor de confianza para contratar Vodafone o Lowi, Crusertel es la opción."</p>
+                        <h3 class="testimonial-name">Lope Carrillo</h3>
+                        <p class="testimonial-text">"¡Altamente recomendables! Me resolvieron todas las dudas sobre portabilidad y cobertura. El cambio fue transparente y sin cortes. Valoro mucho la honestidad y claridad con la que trabajan. Si buscas un distribuidor de confianza, Crusertel es la opción."</p>
                     </div>
                     <div class="service-item pop-in-initial">
-                        <h3>Hernando Yuste</h3>
-                        <p>"Llevo años con Vodafone, pero quería revisar si había algo mejor para mi negocio. En Crusertel me ofrecieron un estudio personalizado de mis necesidades y me presentaron una oferta de Vodafone que no conocía, con ventajas que se adaptaban perfectamente. Me gestionaron todo el papeleo y la transición fue impecable. Es un alivio tener un asesor de confianza para estos temas. ¡Profesionales y eficientes!"</p>
+                        <h3 class="testimonial-name">Hernando Yuste</h3>
+                        <p class="testimonial-text">"Me ofrecieron un estudio personalizado de mis necesidades y presentaron una oferta de Vodafone perfecta para mi negocio. Gestionaron todo el papeleo y la transición fue impecable. Es un alivio tener un asesor de confianza. ¡Profesionales y eficientes!"</p>
                     </div>
                 </div>
             </div>
@@ -71,11 +72,11 @@
     </main>
 
     <footer class="fade-in-up-initial">
-        <div class="container" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; font-size: 0.95em;">
+        <div class="container footer-content">
             <span>📧 info@crusertel.es</span>
-            <span>|</span>
+            <span class="separator">|</span>
             <span>📍 Calle Arabial 45 local 18</span>
-            <span>|</span>
+            <span class="separator">|</span>
             <span>📞 958 01 64 11</span>
         </div>
     </footer>
