--- a/pagina_faq.html
+++ b/pagina_faq.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crusertel - Preguntas Frecuentes</title>
-    <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css?v=1.1">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="fade-in-down-initial">
@@ -27,8 +27,8 @@
     <main>
         <section id="hero" class="fade-in-up-initial hero-bg">
             <div class="container">
-                <h2>Preguntas Frecuentes (FAQ)</h2>
-                <p><b>Aquí podremos resolver algunas de tus dudas, pero en caso de que alguna no se resuelva no dudes en contactarnos.</b></p>
+                <h2 class="section-title">Preguntas Frecuentes</h2>
+                <p class="hero-tagline">Encuentra respuestas a tus dudas. Si necesitas más información, no dudes en contactarnos.</p>
             </div>
         </section>
 
@@ -37,25 +37,37 @@
                 <div class="faq-item faq-left">
                     <h3>¿Qué diferencia hay entre Vodafone y Lowi?</h3>
                     <div class="faq-respuesta">
-                        <p>Lowi es la marca low-cost de Vodafone, con tarifas más sencillas y económicas, principalmente online. Vodafone ofrece más servicios (TV, roaming amplio, etc.) y atención más completa.</p>
+                        <p>Lowi es la marca low-cost de Vodafone, ofreciendo tarifas más sencillas y económicas, principalmente gestionadas de forma online. Vodafone proporciona una gama más amplia de servicios adicionales como televisión, roaming internacional extenso y atención al cliente más completa.</p>
                     </div>
                 </div>
                 <div class="faq-item faq-right">
                     <h3>¿Qué cobertura utilizan Vodafone y Lowi?</h3>
                     <div class="faq-respuesta">
-                        <p>Ambos utilizan la red de Vodafone (móvil 5G y fibra), que cubre la mayor parte del territorio nacional. Lowi también puede usar red de fibra indirecta en zonas específicas.</p>
+                        <p>Ambas marcas utilizan la red de Vodafone, que incluye tecnología móvil 5G y fibra óptica con cobertura en la mayor parte del territorio nacional. Lowi también puede utilizar red de fibra indirecta en algunas zonas específicas.</p>
                     </div>
                 </div>
                 <div class="faq-item faq-left">
-                    <h3>¿Cómo puedo comprobar la cobertura de fibra y móvil en mi zona?</h3>
+                    <h3>¿Cómo puedo comprobar la cobertura en mi zona?</h3>
                     <div class="faq-respuesta">
-                        <p>Puedes usar el verificador de cobertura en la web de cada operador o contactar con ellos directamente.</p>
+                        <p>Puedes verificar la cobertura disponible utilizando el verificador oficial en la web de cada operador o contactarnos directamente para que te ayudemos a comprobar la disponibilidad de fibra y móvil en tu ubicación.</p>
                     </div>
                 </div>
                 <div class="faq-item faq-right">
-                    <h3>¿Ofrecen instalación gratuita?</h3>
+                    <h3>¿La instalación de fibra tiene coste?</h3>
                     <div class="faq-respuesta">
-                        <p>La instalación de fibra óptica es gratuita en la mayoría de nuestros planes, sujeta a condiciones y compromiso de permanencia. Te informaremos de todos los detalles al contratar.</p>
+                        <p>La instalación de fibra óptica es gratuita en la mayoría de nuestros planes, sujeta a condiciones específicas y compromiso de permanencia. Te informaremos de todos los detalles y costes asociados al contratar tu servicio.</p>
+                    </div>
+                </div>
+                <div class="faq-item faq-left">
+                    <h3>¿Puedo cambiar de operador manteniendo mi número?</h3>
+                    <div class="faq-respuesta">
+                        <p>Sí, puedes realizar una portabilidad para mantener tu número actual al cambiar de operador. Nosotros nos encargamos de gestionar todo el proceso para que sea rápido y sin interrupciones en tu servicio.</p>
+                    </div>
+                </div>
+                <div class="faq-item faq-right">
+                    <h3>¿Qué es un paquete convergente?</h3>
+                    <div class="faq-respuesta">
+                        <p>Un paquete convergente combina servicios de fibra óptica para el hogar con líneas de telefonía móvil en un único contrato. Ofrece mayor comodidad con una sola factura y generalmente precios más competitivos que contratar los servicios por separado.</p>
                     </div>
                 </div>
             </div>
@@ -63,11 +75,11 @@
     </main>
 
     <footer class="fade-in-up-initial">
-        <div class="container" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; font-size: 0.95em;">
+        <div class="container footer-content">
             <span>📧 info@crusertel.es</span>
-            <span>|</span>
+            <span class="separator">|</span>
             <span>📍 Calle Arabial 45 local 18</span>
-            <span>|</span>
+            <span class="separator">|</span>
             <span>📞 958 01 64 11</span>
         </div>
     </footer>
