--- a/pagina_unete.html
+++ b/pagina_unete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crusertel - Únete a nosotros</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css?v=1.1">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,7 +27,7 @@
     <main>
         <section class="intro-unete fondo-unete">
             <div class="container fondo-unete-texto">
-                <h2>En Crusertel somos más que un equipo, somos una familia. ¿Te gustaría unirte?</h2>
+                <h2>¿Te gustaría unirte?</h2>
                 <p>Puedes unirte a nosotros y trabajar codo con codo en la revolución de las telecomunicaciones.</p>
             </div>
         </section>
@@ -48,14 +48,14 @@
                     <div class="ventaja">
                         <img src="img/Personas/imagen_persona3.png" alt="Integración absoluta">
                         <h3>Integración absoluta</h3>
-                        <p><b>En esta familia la integración de nuevos colaboradores es nuestra especialidad. ¡Siéntete querido mientras trabajas!</b></p>
+                        <p><b>En este equipo la integración de nuevos colaboradores es nuestra especialidad. ¡Siéntete querido mientras trabajas!</b></p>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="segmento" style="background-color: #d40000; color: white; padding: 15px; text-align: center;">
-            <p>Si te interesa la idea de formar parte de esta familia háznos saber según tu situación</p>
+            <p>Si te interesa la idea de formar parte de este equipo háznos saber según tu situación</p>
         </section>
 
         <section class="perfiles">
@@ -78,11 +78,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section class="contacto-unete" style="text-align: center; margin: 40px 0;">
-            <p><strong style="color: #d40000;">¿Te interesa nuestra política?</strong> – ¡Presentémonos!</p>
-            <p style="font-weight: bold;">Déjanos conocerte un poco más.</p>
         </section>
     </main>
 
