--- a/pagina_Inicio.html
+++ b/pagina_Inicio.html
@@ -3,26 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crusertel - Tu Partner en Telecomunicaciones</title>
-    <link rel="stylesheet" href="main.css?v=1.1">
+    <title>Crusertel - Tu Socio en Telecomunicaciones</title>
+    <link rel="stylesheet" href="main.css?v=1.2">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="fade-in-down-initial">
-        <div class="container header-content">
-            <div class="logo">
-                <a href="pagina_Inicio.html"><img src="img/imagen_logo_crusertel.jpg" alt="Logo Crusertel"></a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="pagina_servicios.html">Servicios</a></li>
-                    <li><a href="pagina_faq.html">Preguntas Frecuentes</a></li>
-                    <li><a href="pagina_contacto.php">Contacto</a></li>
-                    <li><a href="pagina_unete.html">Únete</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
     <main>
         <section id="hero" class="fade-in-up-initial hero-bg">
