--- a/header.html
+++ b/header.html
@@ -1,16 +1,20 @@
-<!-- header.html -->
+<!DOCTYPE html>
 <header class="fade-in-down-initial">
     <div class="container header-content">
         <div class="logo">
-            <a href="pagina_Inicio.html"><img src="img/imagen_logo_crusertel.jpg" alt="Logo Crusertel"></a>
+            <a href="pagina_Inicio.html">
+                <img src="img/imagen_logo_crusertel.jpg" alt="Logo Crusertel">
+            </a>
         </div>
         
+        <!-- Burger Menu Icon -->
         <button class="burger-menu" aria-label="Abrir menú">
             <span></span>
             <span></span>
             <span></span>
         </button>
         
+        <!-- Navigation Menu -->
         <nav class="nav-menu">
             <ul>
                 <li><a href="pagina_servicios.html">Servicios</a></li>
